; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_cpu_arm.c_arm_map_dwarf_register.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_cpu_arm.c_arm_map_dwarf_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CV_ARM_R0 = common dso_local global i32 0, align 4
@CV_ARM_CPSR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Don't know how to map register %d\0A\00", align 1
@CV_ARM_NOREG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @arm_map_dwarf_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arm_map_dwarf_register(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ule i32 %6, 15
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32, i32* @CV_ARM_R0, align 4
  %10 = load i32, i32* %4, align 4
  %11 = add i32 %9, %10
  store i32 %11, i32* %3, align 4
  br label %21

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, 128
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = load i32, i32* @CV_ARM_CPSR, align 4
  store i32 %16, i32* %3, align 4
  br label %21

17:                                               ; preds = %12
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @FIXME(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %18)
  %20 = load i32, i32* @CV_ARM_NOREG, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %17, %15, %8
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
